--- a/package.json
+++ b/package.json
@@ -1,15 +1,47 @@
 {
-  "name": "sexate",
-  "version": "1.0.0",
+  "name": "sexate-react",
+  "version": "0.1.0",
+  "private": true,
   "description": "Electron App to one-click send emails with attachments",
-  "main": "main.js",
-  "repository": "https://github.com/felipempantoja/sexate.git",
-  "author": "Felipe Pantoja <felipe.pantoja@mprj.mp.br>",
-  "license": "MIT",
-  "scripts": {
-    "start": "electron ."
+  "author": "Felipe Pantoja <felipempantoja@gmail.com>",
+  "build": {
+    "appId": "sexate"
   },
+  "main": "public/electron.js",
+  "homepage": "./",
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "electron-is-dev": "^1.0.1",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.3"
+  },
+  "scripts": {
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"./node_modules/.bin/cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "electron": "^4.1.3"
+    "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
+    "electron": "^4.1.4",
+    "electron-builder": "^20.39.0",
+    "wait-on": "^3.2.0",
+    "react-scripts": "2.1.8"
   }
 }
