--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "electron-is-dev": "^1.0.1",
+    "nodemailer": "^6.1.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
-    "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.3"
+    "react-dom": "^16.8.6"
   },
   "scripts": {
     "react-start": "react-scripts start",
@@ -41,7 +41,8 @@
     "cross-env": "^5.2.0",
     "electron": "^4.1.4",
     "electron-builder": "^20.39.0",
-    "wait-on": "^3.2.0",
-    "react-scripts": "2.1.8"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "react-scripts": "2.1.8",
+    "wait-on": "^3.2.0"
   }
 }
